hw05/test/zm-while-exp-not-num.fmj
public int main() {
    int[] n;
    n = new int[3];
    while (n) { // error
        
    }
    return n;
}
